added simple performances api
