# api/src/doc/swagger.json
@@ -110,6 +110,29 @@
 					}
 				}
 			}
+		},
+		"/performances": {
+			"get": {
+				"operationId": "GetPerformances",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Performance"
+									},
+									"type": "array",
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
